NG - Correction du z-index du bandeau de titre dans le panneau admin, gênant l'affichage des popovers

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -566,7 +566,7 @@ ul.social-icons li {
 }
 .global-page-header .block {
   position: relative;
-  z-index: 99;
+  /*z-index: 99;*/
   text-align: center;
 }
 #product-showcase-banner {
